added index,css files

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!Doctype html>
 <html>
 
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
     <h1>World clock</h1>
+    <h2>Time zones list</h2>
+    <h3>Times</h3>
+    <ul>
+        <li>Asia pasific</li>
+    </ul>
 </body>
 
 </html>
