--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!Doctype html>
-<html>
+<html lang="en-us">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>World clock</h1>
-    <h2>Time zones list</h2>
-    <h3>Times</h3>
-    <ul>
-        <li>Asia pasific</li>
-        <li>Eastern, US</li>
-    </ul>
+
+    <h2><label for="timezone">Time Zone</label></h2>
+    <select name="timezone" id="timezone">
+        <option value="Asia pasific">Asia pasific</option>
+        <option value="Eastern, US">Eastern, US</option>
+    </select>
 </body>
 
 </html>
